@@ -1,9 +1,7 @@
 package org.opencds.service.evaluate;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.HashMap;
-import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
@@ -13,8 +11,6 @@ import org.opencds.common.exceptions.DataFormatException;
 import org.opencds.common.exceptions.ImproperUsageException;
 import org.opencds.common.exceptions.InvalidDataException;
 import org.opencds.common.exceptions.OpenCDSRuntimeException;
-import org.opencds.common.interfaces.ResultSetBuilder;
-import org.opencds.common.structures.EvaluationRequestKMItem;
 import org.opencds.vmr.v1_0.internal.CDSInput;
 import org.opencds.vmr.v1_0.internal.ClinicalStatement;
 import org.opencds.vmr.v1_0.internal.ClinicalStatementRelationship;
@@ -27,57 +23,52 @@ import org.opencds.vmr.v1_0.mappings.mappers.CDSOutputMapper;
 import org.opencds.vmr.v1_0.mappings.mappers.OneObjectMapper;
 import org.opencds.vmr.v1_0.mappings.out.structures.OrganizedResults;
 import org.opencds.vmr.v1_0.mappings.utilities.MappingUtility;
+import org.springframework.util.ObjectUtils;
 
+import lombok.experimental.UtilityClass;
 import lombok.extern.slf4j.Slf4j;
 
+@UtilityClass
 @Slf4j
-public class CdsOutputResultSetBuilder implements ResultSetBuilder<org.opencds.vmr.v1_0.schema.CDSOutput>
+public class CdsOutputResultSetBuilder
 {
-    private static final String[] clinicalStatementNames =
-            { "AdverseEvent", "DeniedAdverseEvent", "AppointmentProposal", "AppointmentRequest", "EncounterEvent",
+    private static final Set<String> csNameList =
+            Set.of("AdverseEvent", "DeniedAdverseEvent", "AppointmentProposal", "AppointmentRequest", "EncounterEvent",
                     "MissedAppointment", "ScheduledAppointment", "Goal", "GoalProposal", "ObservationOrder", "ObservationProposal",
                     "ObservationResult", "UnconductedObservation", "DeniedProblem", "Problem", "ProcedureEvent", "ProcedureOrder",
                     "ProcedureProposal", "ScheduledProcedure", "UndeliveredProcedure", "SubstanceAdministrationEvent",
                     "SubstanceAdministrationOrder", "SubstanceAdministrationProposal", "SubstanceDispensationEvent",
-                    "UndeliveredSubstanceAdministration", "SupplyEvent", "SupplyOrder", "SupplyProposal", "UndeliveredSupply" };
-    private static final Set<String> csNameList = new HashSet<>(Arrays.asList(clinicalStatementNames));
-    private static final String[] entityNames =
-            { "AdministrableSubstance", "Entity", "EvaluatedPerson", "Facility", "Organization", "Person", "Specimen" };
-    private static final Set<String> entityNameList = new HashSet<>(Arrays.asList(entityNames));
-    private static final String[] outputNames =
-            { "AdverseEvent", "DeniedAdverseEvent", "AppointmentProposal", "AppointmentRequest", "EncounterEvent",
+                    "UndeliveredSubstanceAdministration", "SupplyEvent", "SupplyOrder", "SupplyProposal", "UndeliveredSupply");
+    private static final Set<String> entityNameList =
+            Set.of("AdministrableSubstance", "Entity", "EvaluatedPerson", "Facility", "Organization", "Person", "Specimen");
+    private static final List<String> outputNameList =
+            List.of("AdverseEvent", "DeniedAdverseEvent", "AppointmentProposal", "AppointmentRequest", "EncounterEvent",
                     "MissedAppointment", "ScheduledAppointment", "Goal", "GoalProposal", "ObservationOrder", "ObservationProposal",
                     "ObservationResult", "UnconductedObservation", "DeniedProblem", "Problem", "ProcedureEvent", "ProcedureOrder",
                     "ProcedureProposal", "ScheduledProcedure", "UndeliveredProcedure", "SubstanceAdministrationEvent",
                     "SubstanceAdministrationOrder", "SubstanceAdministrationProposal", "SubstanceDispensationEvent",
                     "UndeliveredSubstanceAdministration", "SupplyEvent", "SupplyOrder", "SupplyProposal", "UndeliveredSupply",
                     "AdministrableSubstance", "Entity", "EvaluatedPerson", "Facility", "Organization", "Person", "Specimen",
-                    "ClinicalStatementRelationship", "EntityRelationship" };
-    private static final List<String> outputNameList = Arrays.asList(outputNames);
+                    "ClinicalStatementRelationship", "EntityRelationship");
 
+    @SuppressWarnings("unchecked")
     private static <T> List<T> getResults(final Map<String, List<?>> results, final String key)
     {
         return (List<T>) results.get(key);
     }
 
-    @Override
-    public org.opencds.vmr.v1_0.schema.CDSOutput buildResultSet(final Map<String, List<?>> results,
-            final EvaluationRequestKMItem dssRequestKMItem)
+    public static org.opencds.vmr.v1_0.schema.CDSOutput buildResultSet(final Map<String, List<?>> results)
     {
         final org.opencds.vmr.v1_0.schema.CDSOutput cdsOutput = new org.opencds.vmr.v1_0.schema.CDSOutput();
         final List<FocalPersonId> focalPersonIds = getResults(results, "FocalPersonId");
-        String focalPersonId = null;
-        if (focalPersonIds != null && !focalPersonIds.isEmpty())
-        {
-            focalPersonId = focalPersonIds.getFirst().id();
-        }
+        final String focalPersonId = ObjectUtils.isEmpty(focalPersonIds) ? null : focalPersonIds.getFirst().id();
 
         final List<ClinicalStatementRelationship> allClinicalStmtRels = getResults(results, "ClinicalStatementRelationship");
-        final Map<String, List<ClinicalStatementRelationship>> clinicalStmtRelsByTargetId =
-                allClinicalStmtRels != null
-                ? allClinicalStmtRels.stream()
-                  .collect(Collectors.groupingBy(ClinicalStatementRelationship::getTargetId))
-                : new HashMap<>();
+        final Map<String, List<ClinicalStatementRelationship>> clinicalStmtRelsByTargetId = allClinicalStmtRels == null
+                                                                                            ? Map.of()
+                                                                                            : allClinicalStmtRels.stream()
+                                                                                              .collect(Collectors.groupingBy(
+                                                                                                      ClinicalStatementRelationship::getTargetId));
 
         if (getResults(results, "CDSInput") != null)
         {
@@ -105,21 +96,17 @@ public class CdsOutputResultSetBuilder implements ResultSetBuilder<org.opencds.v
                         for (final String oneFactListName : outputNameList)
                         {
                             final List<?> oneResultList = getResults(results, oneFactListName);
-                            if ((oneResultList != null) && (!oneResultList.isEmpty()))
+                            if (!ObjectUtils.isEmpty(oneResultList))
                             {
-
                                 for (final Object oneResult : oneResultList)
                                 {
-
                                     final String oneResultClassName = oneResult.getClass().getSimpleName();
                                     if (csNameList.contains(oneResultClassName))
                                     {
-
                                         final ClinicalStatement oneCSResult = ((ClinicalStatement) oneResult);
                                         if (oneCSResult.isToBeReturned() && subjectPersonId.equals(
                                                 oneCSResult.getEvaluatedPersonId()))
                                         {
-
                                             final List<ClinicalStatementRelationship> clinicalStmtRels =
                                                     clinicalStmtRelsByTargetId.get(oneCSResult.getId());
                                             if (clinicalStmtRels != null)
@@ -128,32 +115,17 @@ public class CdsOutputResultSetBuilder implements ResultSetBuilder<org.opencds.v
                                                 {
 
                                                     if (oneCSResult.isClinicalStatementToBeRoot())
-                                                    {
-                                                        final String warningMsg =
-                                                                "WARNING: CdsOutputResultSetBuilder found a Clinical Statement id "
-                                                                        + oneClinicalStatementRelationship.getTargetId()
-                                                                        + " which is flagged "
-                                                                        + "as isClinicalStatementToBeRoot() == true, and is also the target of "
-                                                                        + "a Clinical Statement Relationship to id "
-                                                                        + oneClinicalStatementRelationship.getSourceId() + ".";
-                                                        log.warn(warningMsg);
-                                                    }
+                                                        log.warn(
+                                                                "WARNING: CdsOutputResultSetBuilder found a Clinical Statement id {} which is flagged as isClinicalStatementToBeRoot() == true, and is also the target of a Clinical Statement Relationship to id {}.",
+                                                                oneClinicalStatementRelationship.getTargetId(),
+                                                                oneClinicalStatementRelationship.getSourceId());
 
                                                     if (oneCSResult.getRelationshipToSources() == null)
-                                                    {
-                                                        final List<RelationshipToSource> relationshipToSources = new ArrayList<>();
-                                                        oneCSResult.setRelationshipToSources(relationshipToSources);
-                                                    }
-                                                    boolean alreadyThere = false;
-                                                    for (final RelationshipToSource oneRTS : oneCSResult.getRelationshipToSources())
-                                                    {
-                                                        if (oneCSResult.getId().equals(oneRTS.getSourceId()))
-                                                        {
-                                                            alreadyThere = true;
-                                                            break;
-                                                        }
-                                                    }
-                                                    if (!alreadyThere)
+                                                        oneCSResult.setRelationshipToSources(new ArrayList<>());
+
+                                                    if (oneCSResult.getRelationshipToSources()
+                                                            .stream()
+                                                            .noneMatch(oneRTS -> oneCSResult.getId().equals(oneRTS.getSourceId())))
                                                     {
                                                         final RelationshipToSource newRelationshipToSource =
                                                                 new RelationshipToSource();
@@ -165,7 +137,7 @@ public class CdsOutputResultSetBuilder implements ResultSetBuilder<org.opencds.v
                                                     }
 
                                                     final String key = oneClinicalStatementRelationship.getSourceId();
-                                                    csChildren.computeIfAbsent(key, k -> new ArrayList<>()).add(oneCSResult);
+                                                    csChildren.computeIfAbsent(key, _ -> new ArrayList<>()).add(oneCSResult);
                                                 }
                                             }
                                         }
@@ -176,12 +148,7 @@ public class CdsOutputResultSetBuilder implements ResultSetBuilder<org.opencds.v
                                         {
                                             final EntityBase oneEBresult = (EntityBase) oneResult;
                                             if (subjectPersonId.equals(oneEBresult.getEvaluatedPersonId()))
-                                            {
-
-                                                final String key = oneEBresult.getId();
-                                                entityChildren.put(key, oneEBresult);
-                                            }
-
+                                                entityChildren.put(oneEBresult.getId(), oneEBresult);
                                         }
                                         else
                                             if ("EntityRelationship".equals(oneResultClassName))
@@ -189,11 +156,8 @@ public class CdsOutputResultSetBuilder implements ResultSetBuilder<org.opencds.v
                                                 final EntityRelationship oneERresult = (EntityRelationship) oneResult;
 
                                                 if (oneERresult.getSourceId() != null)
-                                                {
-                                                    final String key = oneERresult.getSourceId();
-                                                    entityRelationships.computeIfAbsent(key, k -> new ArrayList<>())
-                                                            .add(oneERresult);
-                                                }
+                                                    entityRelationships.computeIfAbsent(oneERresult.getSourceId(),
+                                                            _ -> new ArrayList<>()).add(oneERresult);
                                             }
                                 }
                             }
@@ -204,37 +168,25 @@ public class CdsOutputResultSetBuilder implements ResultSetBuilder<org.opencds.v
                             final List<?> oneResultList = getResults(results, oneName);
                             if ((oneResultList != null) && (!oneResultList.isEmpty()))
                             {
-
                                 for (final Object oneResult : oneResultList)
                                 {
                                     if ((oneResult.getClass().getSuperclass() != null) && (
                                             oneResult.getClass().getSuperclass().getSuperclass() != null)
                                             && ("ClinicalStatement".equals(
-                                            oneResult.getClass().getSuperclass().getSuperclass().getSimpleName())))
-                                    {
-                                        if (((ClinicalStatement) oneResult).isClinicalStatementToBeRoot() && subjectPersonId.equals(
-                                                ((ClinicalStatement) oneResult).getEvaluatedPersonId()))
-                                        {
-
-                                            final Object target = new Object();
-                                            final OrganizedResults organizedResults =
-                                                    new OrganizedResults(outputClinicalStatements, subjectPersonId, focalPersonId,
-                                                            results, csChildren, entityChildren, entityRelationships);
-                                            OneObjectMapper.pushOutRootClinicalStatement(oneResult, target, organizedResults);
-                                        }
-                                    }
+                                            oneResult.getClass().getSuperclass().getSuperclass().getSimpleName()))
+                                            && ((ClinicalStatement) oneResult).isClinicalStatementToBeRoot()
+                                            && subjectPersonId.equals(((ClinicalStatement) oneResult).getEvaluatedPersonId()))
+                                        OneObjectMapper.pushOutRootClinicalStatement(oneResult, new Object(),
+                                                new OrganizedResults(outputClinicalStatements, subjectPersonId, focalPersonId,
+                                                        results, csChildren, entityChildren, entityRelationships));
                                 }
                             }
                         }
 
                         if (subjectPersonId.equals(focalPersonId))
-                        {
-
                             cdsOutput.getVmrOutput().getPatient().setClinicalStatements(outputClinicalStatements);
-                        }
                         else
                         {
-
                             for (int i = 0;
                                  i < cdsOutput.getVmrOutput().getOtherEvaluatedPersons().getEvaluatedPerson().size(); i++)
                             {
@@ -256,8 +208,9 @@ public class CdsOutputResultSetBuilder implements ResultSetBuilder<org.opencds.v
             }
             catch (final DataFormatException | InvalidDataException | ImproperUsageException e)
             {
-                throw new OpenCDSRuntimeException("CdsOutputResultSetBuilder received a " + e.getClass().getSimpleName()
-                        + " while doing a CDSOutputMapper.pushOut: " + e.getMessage(), e);
+                throw new OpenCDSRuntimeException(
+                        "CdsOutputResultSetBuilder received a %s while doing a CDSOutputMapper.pushOut: %s".formatted(
+                                e.getClass().getSimpleName(), e.getMessage()), e);
             }
             catch (final StackOverflowError e)
             {
@@ -266,6 +219,7 @@ public class CdsOutputResultSetBuilder implements ResultSetBuilder<org.opencds.v
                         e);
             }
         }
+
         return cdsOutput;
     }
 }
